# rust-web-template

./: Cargo.toml  server.http  setup.sh
.devcontainer/: devcontainer.json
src/: main.rs
