[package]
name = "rust_web_template"
version = "0.1.0"
authors = ["Joshua Hamilton <joshua@tinydog.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
diesel = { version = "1.4.5", features = ["postgres"] }
dotenv = "0.15.0"
jsonwebtoken = "7"
juniper = "0.14.2"
serde = {version = "1.0", features = ["derive"] }
